test_suite/tests/ui/type-attribute/from.stderr
error: failed to parse type: from = "Option<T"
 --> $DIR/from.rs:4:10
  |
4 | #[derive(Deserialize)]
  |          ^^^^^^^^^^^

error: aborting due to previous error

